--- a/group_dialog.ui
+++ b/group_dialog.ui
@@ -32,10 +32,10 @@
   <widget class="QWidget" name="horizontalLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>20</y>
-     <width>471</width>
-     <height>301</height>
+     <x>0</x>
+     <y>0</y>
+     <width>491</width>
+     <height>321</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
@@ -81,27 +81,24 @@
       <item row="0" column="1">
        <widget class="QSpinBox" name="number"/>
       </item>
+      <item row="3" column="1">
+       <widget class="QPushButton" name="add_group_button">
+        <property name="text">
+         <string>Add group</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0">
+       <widget class="QLabel" name="label_4">
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
      </layout>
     </item>
    </layout>
   </widget>
-  <widget class="QPushButton" name="add_group_button">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>320</y>
-     <width>99</width>
-     <height>27</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Add group</string>
-   </property>
-  </widget>
-  <zorder>buttonBox</zorder>
-  <zorder>horizontalLayoutWidget</zorder>
-  <zorder>add_group_button</zorder>
-  <zorder>formLayoutWidget</zorder>
  </widget>
  <resources/>
  <connections>
