--- a/group_dialog.ui
+++ b/group_dialog.ui
@@ -71,6 +71,9 @@
           <property name="accessibleName">
            <string/>
           </property>
+          <property name="minimum">
+           <number>1</number>
+          </property>
          </widget>
         </item>
         <item row="2" column="0">
@@ -81,7 +84,11 @@
          </widget>
         </item>
         <item row="0" column="1">
-         <widget class="QSpinBox" name="number"/>
+         <widget class="QSpinBox" name="number">
+          <property name="minimum">
+           <number>1</number>
+          </property>
+         </widget>
         </item>
         <item row="3" column="0">
          <widget class="QLabel" name="label_4">
@@ -93,18 +100,22 @@
        </layout>
       </item>
       <item>
-       <widget class="QPushButton" name="add_group_button">
-        <property name="text">
-         <string>Add Group</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="remove_group_button">
-        <property name="text">
-         <string>Remove Group</string>
-        </property>
-       </widget>
+       <layout class="QVBoxLayout" name="verticalLayout_2">
+        <item>
+         <widget class="QPushButton" name="add_group_button">
+          <property name="text">
+           <string>Add Group</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="remove_group_button">
+          <property name="text">
+           <string>Remove Group</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
      </layout>
     </item>
