--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -193,7 +193,7 @@
      <x>0</x>
      <y>0</y>
      <width>954</width>
-     <height>41</height>
+     <height>25</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuAdd_content">
@@ -202,6 +202,9 @@
     </property>
     <addaction name="actionAdd_group_profile"/>
     <addaction name="actionAdd_teacher_profile"/>
+    <addaction name="separator"/>
+    <addaction name="save"/>
+    <addaction name="load"/>
    </widget>
    <addaction name="menuAdd_content"/>
   </widget>
@@ -248,6 +251,16 @@
   <action name="actionSet_Room_Count">
    <property name="text">
     <string>Set Room Count...</string>
+   </property>
+  </action>
+  <action name="save">
+   <property name="text">
+    <string>save</string>
+   </property>
+  </action>
+  <action name="load">
+   <property name="text">
+    <string>load</string>
    </property>
   </action>
  </widget>
