--- a/src/gui/group_dialog.ui
+++ b/src/gui/group_dialog.ui
@@ -41,7 +41,7 @@
           </widget>
          </item>
          <item row="2" column="1">
-          <widget class="QSpinBox" name="cource">
+          <widget class="QSpinBox" name="ed_year">
            <property name="whatsThis">
             <string/>
            </property>
@@ -56,7 +56,7 @@
          <item row="2" column="0">
           <widget class="QLabel" name="label_3">
            <property name="text">
-            <string>Cource</string>
+            <string>Education Year</string>
            </property>
           </widget>
          </item>
