--- a/src/gui/mainwindow.ui
+++ b/src/gui/mainwindow.ui
@@ -116,6 +116,9 @@
       </item>
       <item>
        <layout class="QGridLayout" name="gridLayout">
+        <property name="sizeConstraint">
+         <enum>QLayout::SetMaximumSize</enum>
+        </property>
         <item row="0" column="0">
          <widget class="QPushButton" name="groups_button">
           <property name="text">
