NEW: gui: added shortcuts to save and load

--- a/src/gui/mainwindow.ui
+++ b/src/gui/mainwindow.ui
@@ -252,12 +252,24 @@
   </action>
   <action name="save">
    <property name="text">
-    <string>save</string>
+    <string>Save</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+S</string>
+   </property>
+   <property name="shortcutContext">
+    <enum>Qt::ApplicationShortcut</enum>
    </property>
   </action>
   <action name="load">
    <property name="text">
-    <string>load</string>
+    <string>Load</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+O</string>
+   </property>
+   <property name="shortcutContext">
+    <enum>Qt::ApplicationShortcut</enum>
    </property>
   </action>
  </widget>
